# whisper-dotnet

./: .gitignore  .gitmodules  CMakeLists.txt  Whisper.net.Runtime.Clblast.nuspec  Whisper.net.Runtime.CoreML.nuspec  Whisper.net.Runtime.Cublas.nuspec  Whisper.net.Runtime.Wasm.nuspec  Whisper.net.Runtime.nuspec  cspell.config.yaml  readme.md  taskfile.yaml  windows-scripts.ps1
.github/: dependabot.yml
.github/config/: native-commit-id-wasm  whisper-dotnet.dict
.github/workflows/: android-native-build.yaml  dotnet.yml  linux-native-build.yml  macos-native-build.yaml  wasm-native-build.yaml  windows-native-build.yml
Whisper.net.Tests/: Whisper.net.Tests.csproj
